FIND_PACKAGE(Protobuf REQUIRED)
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER coincache.proto)
PROTOBUF_GENERATE_PYTHON(PROTO_SRC_PY coincache.proto)
ADD_LIBRARY(coypuproto ${PROTO_HEADER} ${PROTO_SRC})
message(STATUS "foo ${PROTO_SRC_PY}")
add_custom_target(coypu_python ALL DEPENDS ${PROTO_SRC_PY})
